# cpp_raylib_ConwayGameOfLife

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: grid.cpp  grid.hpp  main.cpp  simulation.cpp  simulation.hpp
